--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "build": "node build/build.js",
-    "quotes": "node src/print_quotes.js"
+    "deploy": "npm run build && surge dist --domain=dailyquote.surge.sh"
   },
   "dependencies": {
     "bulma": "^0.6.2",
@@ -68,6 +68,7 @@
     "shelljs": "^0.7.6",
     "sinon": "^4.0.0",
     "sinon-chai": "^2.8.0",
+    "surge": "^0.20.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
