Abandoning project, too much time copying quotes from Evergreen Messages, but I did learn from this project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "daily-quote",
+  "name": "a-quote-a-day",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Omkar Konaraddi",
